--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.12.2",
+    "@nuxtjs/proxy": "^2.0.1",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
-    "websocket": "^1.0.32"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@nuxt/types": "~2.14.0",
