--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@nuxtjs/proxy": "^2.0.1",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.3",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
