--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nuxt": "^2.14.6",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "v-tooltip": "^2.0.3"
   },
   "devDependencies": {
     "@nuxt/types": "~2.14.0",
